--- a/index.html
+++ b/index.html
@@ -60,16 +60,16 @@
                         </h1>
                     </div>
                      <ul class="side-nav" id="mobile-demo">
-                         <li><a class="waves-effect waves-light btn yellow" class="today" href="#today" style="color:#2196f3;" id="main-nav-today">TODAY</a></li>
-                         <li><a class="waves-effect waves-light btn red" class="places" href="#places" style="color:yellow;" id="main-nav-places">PLACES</a></li>
-                         <li><a class="waves-effect waves-light btn blue" href="#upcoming" id="main-nav-upcoming">UPCOMING</a></li>
-                         <li><a class="waves-effect waves-light btn black" class="about" href="#about" id="main-nav-about" style="color:white;">ABOUT</a></li>
+                         <li><a class="waves-effect waves-light btn yellow today"  href="#today" style="color:#2196f3;" id="main-nav-today">TODAY</a></li>
+                         <li><a class="waves-effect waves-light btn red places"  href="#places" style="color:yellow;" id="main-nav-places">PLACES</a></li>
+                         <li><a class="waves-effect waves-light btn blue upcoming" href="#upcoming" id="main-nav-upcoming">UPCOMING</a></li>
+                         <li><a class="waves-effect waves-light btn black about"  href="#about" id="main-nav-about" style="color:white;">ABOUT</a></li>
                      </ul>
                     <ul class=" main-nav-buttons">
-                        <li><a class="waves-effect waves-light btn yellow" class="today" href="#today" style="color:#2196f3;" id="main-nav-today">TODAY</a></li>
-                        <li><a class="waves-effect waves-light btn red" class="places" href="#places" style="color:yellow;" id="main-nav-places">PLACES</a></li>
-                        <li><a class="waves-effect waves-light btn blue" href="#upcoming" id="main-nav-upcoming">UPCOMING</a></li>
-                        <li><a class="waves-effect waves-light btn white " class="about" href="#about" id="main-nav-about" style="color:black;">ABOUT</a></li>
+                        <li><a class="waves-effect waves-light btn yellow today" href="#today" style="color:#2196f3;" id="main-nav-today">TODAY</a></li>
+                        <li><a class="waves-effect waves-light btn red places" href="#places" style="color:yellow;" id="main-nav-places">PLACES</a></li>
+                        <li><a class="waves-effect waves-light btn blue upcoming" href="#upcoming" id="main-nav-upcoming">UPCOMING</a></li>
+                        <li><a class="waves-effect waves-light btn white about" href="#about" id="main-nav-about" style="color:black;">ABOUT</a></li>
                     </ul>
                 </div>
 
@@ -83,7 +83,7 @@
                             <ul class="section-nav today-nav">
                                 <li><a class="home" href="#home">HOME</a></li>
                                 <li><a class="places" href="#places">PLACES</a></li>
-                                <li><a href="#upcoming">UPCOMING</a></li>
+                                <li><a class="upcoming" href="#upcoming">UPCOMING</a></li>
                                 <li><a class="about" href="#about">ABOUT</a></li>
                             </ul>
                             <h2 id="today" class="header">TODAY</h2>
@@ -105,7 +105,7 @@
                         <ul class="section-nav ">
                             <li><a class="home" href="#home">HOME</a></li>
                             <li><a class="today" href="#today">TODAY</a></li>
-                            <li><a href="#upcoming">UPCOMING</a></li>
+                            <li><a class="upcoming" href="#upcoming">UPCOMING</a></li>
                             <li><a class="about" href="#about">ABOUT</a></li>
                         </ul>
                         <h2 id="places" class="header">PLACES</h2>
@@ -143,7 +143,7 @@
                                     <li><a class="home" href="#home" style="color:white;">HOME</a></li>
                                     <li><a class="today" href="#today" style="color:yellow;">TODAY</a></li>
                                     <li><a class="places" href="#places" style="color:red;">PLACES</a></li>
-                                    <li><a href="#upcoming" style="color:#2196f3;">UPCOMING</a></li>
+                                    <li><a class="upcoming" href="#upcoming" style="color:#2196f3;">UPCOMING</a></li>
                                     <li><a href="" id="logout-button" style="color:white;">LOGOUT</a></li>
                                 </ul>
                                 <br><br><br>
