--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
             <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.js"></script>
             <script src="scripts/galleryIDs.js"></script>
-            <script src="scripts/mapinit.js"></script>
+            <script src="scripts/mapInit.js"></script>
             <script src="scripts/app.js"></script>
             <script src="scripts/fb.js"></script>
 
